[package]
name = "playground"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "playground"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.24.2"

[dev-dependencies]
solana-program-test = "1.9.29"
anchor-spl = "0.24.2"
solana-sdk = "1.9.29"